// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummry with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    34
     
    expenses
     totalling 
    $1,437,892.45
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummry with single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $3.45
  </h1>
</div>
`;
